CLOSED FIXED 39218
[Qt] Tiled backing store tiles sometimes flicker when exiting a zoom animation
https://bugs.webkit.org/show_bug.cgi?id=39218
Summary [Qt] Tiled backing store tiles sometimes flicker when exiting a zoom animation
Antti Koivisto
Reported 2010-05-17 07:44:11 PDT
Tiles some times flicker when exiting a zoom animation. This happens as a result of the visible rectangle being momentarily out of sync.
Attachments
patch (10.61 KB, patch)
2010-05-17 07:57 PDT, Antti Koivisto
kenneth: review+
Antti Koivisto
Comment 1 2010-05-17 07:57:03 PDT
Created attachment 56244 [details] patch Instead of updating the visible rect by explicitly setting it, pull it through the client and recompute in the WebKit level.
Kenneth Rohde Christiansen
Comment 2 2010-05-17 08:03:16 PDT
Comment on attachment 56244 [details] patch Looks fine, thought I would like a better name for checkVisibleRectChanged(); Maybe adjustVisibleRect? or something similar
Antti Koivisto
Comment 3 2010-05-17 08:39:02 PDT
with the suggested rename: Sending WebCore/ChangeLog Sending WebCore/page/ChromeClient.h Sending WebCore/page/Frame.cpp Sending WebCore/page/Frame.h Sending WebCore/platform/graphics/TiledBackingStore.cpp Sending WebCore/platform/graphics/TiledBackingStore.h Sending WebCore/platform/graphics/TiledBackingStoreClient.h Sending WebKit/qt/Api/qgraphicswebview.cpp Sending WebKit/qt/ChangeLog Sending WebKit/qt/WebCoreSupport/ChromeClientQt.cpp Sending WebKit/qt/WebCoreSupport/ChromeClientQt.h Transmitting file data ........... Committed revision 59611. Sending WebCore/ChangeLog Sending WebCore/platform/qt/QWebPageClient.h Transmitting file data .. Committed revision 59612.
Simon Hausmann
Comment 4 2010-05-18 22:16:30 PDT
Revision r59611 cherry-picked into qtwebkit-2.0 with commit 9c30b2733c9727c5313df46bcf01cb9cdefbd5a1
Simon Hausmann
Comment 5 2010-05-18 22:17:12 PDT
(In reply to comment #4) > Revision r59611 cherry-picked into qtwebkit-2.0 with commit 9c30b2733c9727c5313df46bcf01cb9cdefbd5a1 r59612 is also included in the same sha1.
Andreas Kling
Comment 6 2010-11-12 10:55:07 PST
*** Bug 39154 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.