https://bugs.webkit.org/show_bug.cgi?id=39218 [Qt] Tiled backing store tiles sometimes flicker when exiting a zoom animation

Reviewed by Kenneth Rohde Christiansen.

WebCore:

Tiles sometimes flicker when exiting a zoom animation. This happens as a result
of the visible rectangle being momentarily out of sync.

Instead of updating the visible rect by explicitly setting it, pull it through
the client and recompute in the WebKit level.

* page/ChromeClient.h:
(WebCore::ChromeClient::visibleRectForTiledBackingStore):
* page/Frame.cpp:
(WebCore::Frame::tiledBackingStoreVisibleRect):
* page/Frame.h:
* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::checkVisibleRectChanged):
(WebCore::TiledBackingStore::createTiles):
* platform/graphics/TiledBackingStore.h:
* platform/graphics/TiledBackingStoreClient.h:

WebKit/qt:

Tiles sometimes flicker when exiting a zoom animation. This happens as a result
of the visible rectangle being momentarily out of sync.

Instead of updating the visible rect by explicitly setting it, pull it through
the client and recompute in WebKit the level.

* Api/qgraphicswebview.cpp:
(QGraphicsWebView::paint):
* WebCoreSupport/ChromeClientQt.cpp:
(WebCore::ChromeClientQt::visibleRectForTiledBackingStore):
* WebCoreSupport/ChromeClientQt.h:



Canonical link: https://commits.webkit.org/50750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59611 268f45cc-cd09-0410-ab3c-d52691b4dbfc