WebCore/page/Frame.cpp
@@ -36,6 +36,7 @@
 #include "CSSPropertyNames.h"
 #include "CachedCSSStyleSheet.h"
 #include "Chrome.h"
+#include "ChromeClient.h"
 #include "DOMWindow.h"
 #include "DocLoader.h"
 #include "DocumentType.h"
@@ -1842,6 +1843,13 @@ IntRect Frame::tiledBackingStoreContentsRect()
     if (!m_view)
         return IntRect();
     return IntRect(IntPoint(), m_view->contentsSize());
+}
+
+IntRect Frame::tiledBackingStoreVisibleRect()
+{
+    if (!m_page)
+        return IntRect();
+    return m_page->chrome()->client()->visibleRectForTiledBackingStore();
 }
 #endif
 
