WebCore/page/Frame.h
@@ -294,6 +294,7 @@ namespace WebCore {
         virtual void tiledBackingStorePaint(GraphicsContext*, const IntRect&);
         virtual void tiledBackingStorePaintEnd(const Vector<IntRect>& paintedArea);
         virtual IntRect tiledBackingStoreContentsRect();
+        virtual IntRect tiledBackingStoreVisibleRect();
 #endif
 
     #if PLATFORM(MAC)
