WebCore/platform/graphics/TiledBackingStoreClient.h
@@ -29,6 +29,7 @@ public:
     virtual void tiledBackingStorePaint(GraphicsContext*, const IntRect&) = 0;
     virtual void tiledBackingStorePaintEnd(const Vector<IntRect>& paintedArea) = 0;
     virtual IntRect tiledBackingStoreContentsRect() = 0;
+    virtual IntRect tiledBackingStoreVisibleRect() = 0;
 };
 
 #else
